<resources>
    <string name="app_name">Android Course</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-Calcular</string>
    <string name="result">Tu resultado</string>


    <string name="error">Error</string>

    <string name="title_under_weight">Bajo peso</string>
    <string name="title_normal">Normal</string>
    <string name="title_overweight">Sobrepeso</string>
    <string name="title_obesity">Obesidad</string>

    <string name="description_under_weight">Estás por debajo de lo óptimo para tu peso y estatura</string>
    <string name="description_normal">Estás en lo óptimo para tu peso y estatura</string>
    <string name="description_overweight">Estás por encima de lo óptimo para tu peso y estatura</string>
    <string name="description_obesity">¡¡Estás MUY por encima de lo óptimo para tu peso y estatura!!</string>

</resources>